Updated CMake builds of Wintermute.
In order to prepare for the use of wntrsdk to build Wintermute, a more simple
approach to render the template files for targets and plug-in specification files
have been used.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(WINTERMUTE_VERSION "${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}"
 include(WintermuteDefaults)
 include(WintermuteMacros)
 
+## include paths.
 add_subdirectory(cmake)
 add_subdirectory(src)
 add_subdirectory(data)
