--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -13,4 +13,5 @@ configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfigVersion.cmake.in"
 install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
               "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake"
               "${PROJECT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+              "${PROJECT_SOURCE_DIR}/cmake/pluginspec.in"
         DESTINATION "${WINTER_CMAKE_DIR}")
