Added the configuring of FindWintermute and removed Boost dependency.
Wintermute no longer needs Boost in order to compile! It's purely Qt now, down
to the command-line parsing technique. Also, the configuring of FindWintermute.cmake
is now available and should be used.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,26 +4,25 @@ project(WintermuteApplication)
 include(WintermuteDefaults)
 include(WintermuteMacros)
 
+## Configures
+configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
+               "${PROJECT_SOURCE_DIR}/config.hpp" @ONLY)
+
 file(GLOB WINTERMUTE_SOURCES "*.cpp")
 file(GLOB WINTERMUTE_HEADERS "*.hpp")
 
 include("${QT_USE_FILE}")
 
 set(WINTERMUTE_INCLUDE_DIR "${WINTER_INCLUDE_INSTALL_DIR}")
-set(WINTERMUTE_INCLUDE_DIRS
-    ${Boost_INCLUDE_DIRS}
+set(WINTERMUTE_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIR}
     ${QT_INCLUDES}
     ${WINTER_PLUGIN_INCLUDE_INSTALL_DIR})
 set(WINTERMUTE_LIBRARIES
-    ${Boost_LIBRARIES}
     ${QT_LIBRARIES})
 set(WINTERMUTE_BUILD_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS}
     "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}")
 
 include_directories(${WINTERMUTE_BUILD_INCLUDE_DIRS})
-
-## Configures
-configure_file("config.hpp.in" "config.hpp" @ONLY)
 
 QT4_AUTOMOC(${WINTERMUTE_SOURCES})
 
@@ -43,5 +42,9 @@ install(TARGETS wintermute
     COMPONENT bin)
 
 install(FILES ${WINTERMUTE_HEADERS}
-    DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}"
-    COMPONENT dev)
+        DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}"
+        COMPONENT dev)
+
+# need the variables here for this module.
+configure_file("${CMAKE_SOURCE_DIR}/cmake/Modules/FindWintermute.cmake.in"
+               "${CMAKE_BINARY_DIR}/InstallFiles/FindWintermute.cmake" @ONLY)
