--- a/src/config.hpp.in
+++ b/src/config.hpp.in
@@ -20,37 +20,48 @@
 /**
  * @author Jacky Alcine <jacky.alcine@thesii.org>
  * @file   config.hpp
- * @brief File providing compile-time data about runtime-configuration. Required for the core of Wintermute.
+ *
+ * File providing compile-time data about runtime-configuration.
+ * Required for the core of Wintermute.
  */
 
-#ifndef WINTERMUTE_CONFIG_HPP_
-#define WINTERMUTE_CONFIG_HPP_
+#ifndef WINTERMUTE_CONFIG_HPP
+#define WINTERMUTE_CONFIG_HPP
 
 // D-Bus Section
-#define WNTR_DBUS_SERVICE_NAME "org.thesii.Wintermute"
+#define WINTER_DBUS_SERVICE_NAME "org.thesii.Wintermute"
 
-#define WNTR_DBUS_FACTORY_NAME WNTR_DBUS_SERVICE_NAME".Factory"
-#define WNTR_DBUS_FACTORY_OBJNAME "/Factory"
-#define WNTR_DBUS_FACTORY_OBJPATH WNTR_DBUS_SERVICE_NAME".Factory"
+#define WINTER_DBUS_FACTORY_NAME WINTER_DBUS_SERVICE_NAME".Factory"
+#define WINTER_DBUS_FACTORY_OBJNAME "/Factory"
+#define WINTER_DBUS_FACTORY_OBJPATH WINTER_DBUS_SERVICE_NAME".Factory"
 
-#define WNTR_DBUS_MASTER_NAME WNTR_DBUS_SERVICE_NAME".Master"
+#define WINTER_DBUS_MASTER_NAME WINTER_DBUS_SERVICE_NAME".Master"
 
-#define WNTR_DBUS_PLUGIN_NAME WNTR_DBUS_SERVICE_NAME".Plugin"
-#define WNTR_DBUS_PLUGIN_OBJNAME "/Plugin"
-#define WNTR_DBUS_PLUGIN_OBJPATH WNTR_DBUS_SERVICE_NAME".Plugin"
+#define WINTER_DBUS_PLUGIN_NAME WINTER_DBUS_SERVICE_NAME".Plugin"
+#define WINTER_DBUS_PLUGIN_OBJNAME "/Plugin"
+#define WINTER_DBUS_PLUGIN_OBJPATH WINTER_DBUS_SERVICE_NAME".Plugin"
 
 // Project Information
-#define WNTR_VERSION @WINTERMUTE_VERSION@
+#define WINTER_VERSION @WINTERMUTE_VERSION@
 
 // Plug-in System Data
-#define WNTR_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
-#define WNTR_PLUGINSPEC_PATH "@WINTER_PLUGIN_SPEC_INSTALL_DIR@"
+#define WINTER_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
+#define WINTER_PLUGINSPEC_PATH "@WINTER_PLUGIN_SPEC_INSTALL_DIR@"
 
 // Build-time Configuration
-#define WNTR_LOCALE "@WINTER_LOCALE@"
-#define WNTR_DATA_DIR "@WINTER_DATA_INSTALL_DIR@"
-#define WNTR_WITH_GUI @WITH_GUI_SUPPORT@
+#define WINTER_LOCALE "@WINTER_LOCALE@"
+#define WINTER_DATA_DIR "@WINTER_DATA_INSTALL_DIR@"
+#define WINTER_WITH_GUI @WITH_GUI_SUPPORT@
+#define WINTER_VERBOSE_PINGS false
+#define WINTER_DEBUG_TIMESTAMPS false
 
-#endif // WINTERMUTE_CONFIG_HPP_
+// Debugging levels.
+#define WINTER_DEBUG_NONE     0x0
+#define WINTER_DEBUG_INFO     0x1
+#define WINTER_DEBUG_WARN     0x2
+#define WINTER_DEBUG FATAL    0x3
+#define WINTER_DEBUG_CRITICAL 0x4
+
+#endif // WINTERMUTE_CONFIG_HPP
 
 // kate: indent-mode cstyle; indent-width 4; replace-tabs on;
