--- a/cmake/Modules/FindWintermute.cmake.in
+++ b/cmake/Modules/FindWintermute.cmake.in
@@ -26,6 +26,7 @@
 #  License text for the above reference.)
 
 include(FindPackageHandleStandardArgs)
+include(WintermuteDefaults)
 
 set(_winty_plugins)
 
@@ -33,17 +34,19 @@ if (Wintermute_FIND_COMPONENTS)
   foreach(component ${Wintermute_FIND_COMPONENTS})
     string( TOLOWER ${component} _COMPONENT )
     list(APPEND _winty_plugins ${_COMPONENT})
-  foreach(component)
+  foreach(component ${Wintermute_FIND_COMPONENTS})
 endif (Wintermute_FIND_COMPONENTS)
 
 set(WINTERMUTE_VERSION              "@WINTERMUTE_VERSION@")
+set(WINTERMUTE_INCLUDE_DIR          "@WINTER_INCLUDE_INSTALL_DIR@")
 set(WINTERMUTE_INCLUDE_DIRS         "@WINTERMUTE_INCLUDE_DIRS@")
 set(WINTERMUTE_LIBRARIES            "@WINTERMUTE_LIBRARIES@")
 set(WINTERMUTE_INCLUDE_DIRS         "@WINTERMUTE_INCLUDE_DIRS@"
                                     "@WINTERMUTE_INCLUDE_DIR@")
-set(WINTERMUTE_LIBRARY_DIRS         "@WINTERMUTE_LIB_DIR@")
+set(WINTERMUTE_LIBRARY_DIRS         "@WINTER_LIB_INSTALL_DIR@")
 set(WINTERMUTE_COMPILE_FLAGS        "@WINTERMUTE_COMPILE_FLAGS@")
-set(WINTEMRUTE_COMPILE_DEFINITIONS  "@WINTERMUTE_COMPILE_DEFINITONS@")
+set(WINTERMUTE_COMPILE_DEFINITIONS  "@WINTERMUTE_COMPILE_DEFINITIONS@")
+set(WINTER_DEPRECATED_WARNINGS      "@WINTER_DEPRECATED_WARNINGS@")
 
 find_program(WINTERMUTE_EXECUTABLE "wintermute" DOC "The path to the Wintermute executable.")
 
