Updated the CMake code to properly install headers and D-Bus plug-in info.

--- a/cmake/Modules/FindWintermute.cmake.in
+++ b/cmake/Modules/FindWintermute.cmake.in
@@ -47,6 +47,7 @@ set(WINTERMUTE_LIBRARY_DIRS         "@WINTER_LIB_INSTALL_DIR@")
 set(WINTERMUTE_COMPILE_FLAGS        "@WINTERMUTE_COMPILE_FLAGS@")
 set(WINTERMUTE_COMPILE_DEFINITIONS  "@WINTERMUTE_COMPILE_DEFINITIONS@")
 set(WINTER_DEPRECATED_WARNINGS      "@WINTER_DEPRECATED_WARNINGS@")
+set(WINTER_CMAKE_DIR                "@WINTER_CMAKE_DIR@")
 
 find_program(WINTERMUTE_EXECUTABLE "wintermute" DOC "The path to the Wintermute executable.")
 
