--- a/cmake/plugin-dbus-service.cmake.in
+++ b/cmake/plugin-dbus-service.cmake.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=org.thesii.Wintermute.Plugin.@WDP_DBUS_NAME@
+Name=org.thesii.Wintermute.Plugin.@WDP_NAME_DBUS@
 Exec=@WINTERMUTE_EXECUTABLE@ --daemon true --ipc plugin --plugin @WDP_UUID@
