Added a bit of work for testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,4 +33,5 @@ include(WintermuteMacros)
 ## include paths.
 add_subdirectory(cmake)
 add_subdirectory(src)
+add_subdirectory(test)
 add_subdirectory(data)
