--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 
+add_subdirectory(Modules)
+add_subdirectory(doc)
+
 include(WintermuteDefaults)
 
 file(GLOB TEMPLATE_FILES "${CMAKE_SOURCE_DIR}/cmake/*.in")
 
-## Installs
 install(FILES ${TEMPLATE_FILES}
-        DESTINATION "${WINTER_CMAKE_DIR}")
+  DESTINATION "${WINTER_CMAKE_DATA_DIR}")
 
-add_subdirectory(Modules)
-add_subdirectory(doc)
+
