--- a/src/global.hpp.in
+++ b/src/global.hpp.in
@@ -18,9 +18,9 @@
 
 /**
  * @author Jacky Alcine <jacky.alcine@thesii.org>
- * @file   config.hpp
+ * @file   global.hpp
  *
- * File providing compile-time data about runtime-configuration.
+ * File providing build-time data about suggested runtime-configuration.
  * Required for the core of Wintermute.
  */
 
@@ -30,7 +30,7 @@
 // Determine if we'll use Qt's session utility.
 // Typically turned off.
 #define WINTER_USE_QT_SESSIONS @WINTER_USE_QT_SESSIONS@
-#if WINTER_USE_QT_SESSIONS
+#ifndef WINTER_USE_QT_SESSIONS
 # undef QT_NO_SESSIONMANAGER
 #endif
 
@@ -73,22 +73,22 @@
 #endif
 
 // *** D-Bus related macros ***
-#define WINTER_DBUS_SERVICE_NAME "org.thesii.Wintermute"
+#define WINTER_DBUS_SERVICE_NAME    "org.thesii.Wintermute"
 
-#define WINTER_DBUS_FACTORY         "Factory"
-#define WINTER_DBUS_FACTORY_NAME    WINTER_DBUS_SERVICE_NAME"."WINTER_DBUS_FACTORY
-#define WINTER_DBUS_FACTORY_OBJNAME "/"WINTER_DBUS_FACTORY
-#define WINTER_DBUS_FACTORY_OBJPATH WINTER_DBUS_SERVICE_NAME"."WINTER_DBUS_FACTORY
+#define WINTER_DBUS_FACTORY         Factory
+#define WINTER_DBUS_FACTORY_NAME    "##WINTER_DBUS_SERVICE_NAME##.##WINTER_DBUS_FACTORY##"
+#define WINTER_DBUS_FACTORY_OBJNAME "/##WINTER_DBUS_FACTORY##"
+#define WINTER_DBUS_FACTORY_OBJPATH "##WINTER_DBUS_SERVICE_NAME##.##WINTER_DBUS_FACTORY##"
 
-#define WINTER_DBUS_MASTER          "Master"
-#define WINTER_DBUS_MASTER_NAME     WINTER_DBUS_SERVICE_NAME"."WINTER_DBUS_MASTER
-#define WINTER_DBUS_MASTER_OBJNAME  "/"WINTER_DBUS_MASTER
-#define WINTER_DBUS_MASTER_OBJPATH  WINTER_DBUS_SERVICE_NAME"."WINTER_DBUS_MASTER
+#define WINTER_DBUS_MASTER          Master
+#define WINTER_DBUS_MASTER_NAME     "##WINTER_DBUS_SERVICE_NAME##.##WINTER_DBUS_MASTER##"
+#define WINTER_DBUS_MASTER_OBJNAME  "/##WINTER_DBUS_MASTER##"
+#define WINTER_DBUS_MASTER_OBJPATH  "##WINTER_DBUS_SERVICE_NAME##.##WINTER_DBUS_MASTER##"
 
-#define WINTER_DBUS_PLUGIN          "Plugin"
-#define WINTER_DBUS_PLUGIN_NAME     WINTER_DBUS_SERVICE_NAME"."WINTER_DBUS_PLUGIN
-#define WINTER_DBUS_PLUGIN_OBJNAME  "/"WINTER_DBUS_PLUGIN
-#define WINTER_DBUS_PLUGIN_OBJPATH  WINTER_DBUS_SERVICE_NAME"."WINTER_DBUS_PLUGIN
+#define WINTER_DBUS_PLUGIN          Plugin
+#define WINTER_DBUS_PLUGIN_NAME     "##WINTER_DBUS_SERVICE_NAME##.##WINTER_DBUS_PLUGIN##"
+#define WINTER_DBUS_PLUGIN_OBJNAME  "/##WINTER_DBUS_PLUGIN##"
+#define WINTER_DBUS_PLUGIN_OBJPATH  "##WINTER_DBUS_SERVICE_NAME##.##WINTER_DBUS_PLUGIN##"
 
 #define WINTER_DBUS_VERBOSE_PINGS false
 #define WINTER_DBUS_UPDATE_TIMEOUT 1000
